2012-05-25  Jessie Berlin  <jberlin@apple.com>

        Skip the Network Information tests on Windows.

        * platform/win/Skipped:

2012-05-25  Joshua Bell  <jsbell@chromium.org>

        [Chromium] Remove 2 incorrect rebaselines from http://trac.webkit.org/changeset/117818/

        Unreviewed gardening.

        * platform/chromium-mac/canvas/philip/tests/2d.imageData.create1.type-expected.txt: Removed.
        * platform/chromium-mac/canvas/philip/tests/2d.imageData.create2.type-expected.txt: Removed.

2012-05-25  Jessie Berlin  <jberlin@apple.com>

        Skip more WebGL tests on Windows.

        * platform/win/Skipped:

2012-05-25  Elliot Poger  <epoger@chromium.org>

        New baselines for http://crbug.com/129184

        Unreviewed rebaselining.

        * platform/chromium-linux/svg/filters/subRegion-one-effect-expected.png:
        * platform/chromium-linux/svg/filters/subRegion-two-effects-expected.png:
        * platform/chromium-linux/svg/transforms/svg-css-transforms-expected.png:
        * platform/chromium-linux/transforms/svg-vs-css-expected.png:
        * platform/chromium-mac/svg/filters/subRegion-one-effect-expected.png:
        * platform/chromium-mac/svg/filters/subRegion-two-effects-expected.png:
        * platform/chromium-mac/svg/transforms/svg-css-transforms-expected.png:
        * platform/chromium-mac/transforms/svg-vs-css-expected.png:
        * platform/chromium-win/svg/filters/subRegion-one-effect-expected.png:
        * platform/chromium-win/svg/filters/subRegion-two-effects-expected.png:
        * platform/chromium-win/svg/transforms/svg-css-transforms-expected.png:
        * platform/chromium-win/transforms/svg-vs-css-expected.png:
        * platform/efl/svg/filters/subRegion-one-effect-expected.txt: Removed.
        * platform/efl/svg/filters/subRegion-two-effects-expected.txt: Removed.
        * platform/gtk/svg/filters/subRegion-one-effect-expected.txt: Removed.