@@ -1,3 +1,15 @@
+2012-05-25  Sheriff Bot  <webkit.review.bot@gmail.com>
+
+        Unreviewed, rolling out r118395.
+        http://trac.webkit.org/changeset/118395
+        https://bugs.webkit.org/show_bug.cgi?id=87526
+
+        Breaking sites including GMail and Yahoo mail (Requested by
+        jsbell on #webkit).
+
+        * rendering/RenderBlock.cpp:
+        (WebCore::RenderBlock::collapseMargins):
+
 2012-05-25  Ken Buchanan  <kenrb@chromium.org>
 
         Layout root not getting cleared for anonymous renderers geting destroyed
