@@ -1,3 +1,15 @@
+2012-05-25  Sheriff Bot  <webkit.review.bot@gmail.com>
+
+        Unreviewed, rolling out r118395.
+        http://trac.webkit.org/changeset/118395
+        https://bugs.webkit.org/show_bug.cgi?id=87526
+
+        Breaking sites including GMail and Yahoo mail (Requested by
+        jsbell on #webkit).
+
+        * fast/css/clear-float-sibling-expected.html: Removed.
+        * fast/css/clear-float-sibling.html: Removed.
+
 2012-05-25  Jessie Berlin  <jberlin@apple.com>
 
         Skip the Network Information tests on Windows.
